changed page background position

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/main.scss" />
     <link rel="icon" href="styles/images/Cookie.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
+    <link 
       rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin="on" />
@@ -74,7 +74,6 @@
         </a>
       </div>
     </header>
-
     <nav class="page__menu menu" id="menu">
       <div class="top-actions">
         <a class="logo" href="#">
@@ -109,116 +108,114 @@
         </div>
       </div>
     </nav>
-
-    <section class="products page__section-products" id="products">
-      <div class="container">
-        <h2 class="products__title">What we bake</h2>
-        <p class="products__paragraph">
-          We can customize our cookies right for your needs. Just imagine it
-        </p>
-        <div class="products__container">
-          <div class="products__block">
-            <div class="card">
-              <div class="card__image card__image--1"></div>
-              <div class="card__title">Cakes</div>
-              <div class="card__paragraph">
-                Oatmeal cookies with golden raisins, orange zest and chocolate
-                chips
-              </div>
-              <a href="#contact-us" class="card__link">Order</a>
-            </div>
-            <div class="card">
-              <div class="card__image card__image--2"></div>
-              <div class="card__title">Cakes</div>
-              <div class="card__paragraph">
-                Chocolate biscuit coffee cake topped with a buttercream and
-                powder
-              </div>
-              <a href="#contact-us" class="card__link">Order</a>
-            </div>
-          </div>
-          <div class="products__block products__block--right">
-            <div class="card">
-              <div class="card__image card__image--3"></div>
-              <div class="card__title">Donuts</div>
-              <div class="card__paragraph">
-                Light multi-layered croissant strewn with cinammon and almond
-                “petals”
-              </div>
-              <a href="#contact-us" class="card__link">Order</a>
-            </div>
-            <div class="card">
-              <div class="card__image card__image--4"></div>
-              <div class="card__title">Donuts</div>
-              <div class="card__paragraph">
-                Light multi-layered croissant strewn with coconut and nuts
-              </div>
-              <a href="#contact-us" class="card__link">Order</a>
-            </div>
-          </div>
-          <div class="products__block">
-            <div class="card">
-              <div class="card__image card__image--5"></div>
-              <div class="card__title">Cakes</div>
-              <div class="card__paragraph">
-                Cake with chocolate salted caramel, Vanilla frutti pebbles
-                inside
-              </div>
-              <a href="#contact-us" class="card__link">Order</a>
-            </div>
-            <div class="card">
-              <div class="card__image card__image--6"></div>
-              <div class="card__title">Cookies</div>
-              <div class="card__paragraph">
-                Oatmeal cookies with golden raisins, orange zest and chocolate
-                chips
-              </div>
-              <a href="#contact-us" class="card__link">Order</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="about-us page__section-about-us" id="about-us">
-      <div class="container">
-        <div class="about-us__content">
-          <h2 class="about-us__title">Few words About us</h2>
-          <p class="about-us__paragraph">
-            Like many design teams, Onfido made the transition from Abstract +
-            Sketch, to Figma in the last couple of years. One of the common
-            resistance points internally before making that switch, was Figma’s
-            lack of Git-style branching that Abstract enabled. The design team
-            had come to rely on branching and had built a lot of our processes
-            around it.
+    <main class="page__main">
+      <section class="products page__section-products" id="products">
+        <div class="container">
+          <h2 class="products__title">What we bake</h2>
+          <p class="products__paragraph">
+            We can customize our cookies right for your needs. Just imagine it
           </p>
+          <div class="products__container">
+            <div class="products__block">
+              <div class="card">
+                <div class="card__image card__image--1"></div>
+                <div class="card__title">Cakes</div>
+                <div class="card__paragraph">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </div>
+                <a href="#contact-us" class="card__link">Order</a>
+              </div>
+              <div class="card">
+                <div class="card__image card__image--2"></div>
+                <div class="card__title">Cakes</div>
+                <div class="card__paragraph">
+                  Chocolate biscuit coffee cake topped with a buttercream and
+                  powder
+                </div>
+                <a href="#contact-us" class="card__link">Order</a>
+              </div>
+            </div>
+            <div class="products__block products__block--right">
+              <div class="card">
+                <div class="card__image card__image--3"></div>
+                <div class="card__title">Donuts</div>
+                <div class="card__paragraph">
+                  Light multi-layered croissant strewn with cinammon and almond
+                  “petals”
+                </div>
+                <a href="#contact-us" class="card__link">Order</a>
+              </div>
+              <div class="card">
+                <div class="card__image card__image--4"></div>
+                <div class="card__title">Donuts</div>
+                <div class="card__paragraph">
+                  Light multi-layered croissant strewn with coconut and nuts
+                </div>
+                <a href="#contact-us" class="card__link">Order</a>
+              </div>
+            </div>
+            <div class="products__block">
+              <div class="card">
+                <div class="card__image card__image--5"></div>
+                <div class="card__title">Cakes</div>
+                <div class="card__paragraph">
+                  Cake with chocolate salted caramel, Vanilla frutti pebbles
+                  inside
+                </div>
+                <a href="#contact-us" class="card__link">Order</a>
+              </div>
+              <div class="card">
+                <div class="card__image card__image--6"></div>
+                <div class="card__title">Cookies</div>
+                <div class="card__paragraph">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </div>
+                <a href="#contact-us" class="card__link">Order</a>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
-
-    <section class="blog page__section-blog" id="blog">
-      <div class="container">
-        <div class="blog__content">
-          <div class="blog__card">
-            <h2 class="blog__title">2015</h2>
-            <p class="blog__paragraph">Foundation year</p>
-          </div>
-          <div class="blog__card">
-            <h2 class="blog__title">23</h2>
-            <p class="blog__paragraph">Stores</p>
-          </div>
-          <div class="blog__card">
-            <h2 class="blog__title">155</h2>
-            <p class="blog__paragraph">Companies</p>
-          </div>
-          <div class="blog__card">
-            <h2 class="blog__title">10k+</h2>
-            <p class="blog__paragraph">Clients</p>
+      </section>
+      <section class="about-us page__section-about-us" id="about-us">
+        <div class="container">
+          <div class="about-us__content">
+            <h2 class="about-us__title">Few words About us</h2>
+            <p class="about-us__paragraph">
+              Like many design teams, Onfido made the transition from Abstract +
+              Sketch, to Figma in the last couple of years. One of the common
+              resistance points internally before making that switch, was
+              Figma’s lack of Git-style branching that Abstract enabled. The
+              design team had come to rely on branching and had built a lot of
+              our processes around it.
+            </p>
           </div>
         </div>
-      </div>
-    </section>
-
+      </section>
+      <section class="blog page__section-blog" id="blog">
+        <div class="container">
+          <div class="blog__content">
+            <div class="blog__card">
+              <h2 class="blog__title">2015</h2>
+              <p class="blog__paragraph">Foundation year</p>
+            </div>
+            <div class="blog__card">
+              <h2 class="blog__title">23</h2>
+              <p class="blog__paragraph">Stores</p>
+            </div>
+            <div class="blog__card">
+              <h2 class="blog__title">155</h2>
+              <p class="blog__paragraph">Companies</p>
+            </div>
+            <div class="blog__card">
+              <h2 class="blog__title">10k+</h2>
+              <p class="blog__paragraph">Clients</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer" id="contact-us">
       <div class="container">
         <div class="footer__content">
